Geometry Nodes: Crash when opening file #119617

Closed
opened 2024-03-18 10:51:04 +01:00 by Andy Goralczyk · 2 comments
Member

System Information
Operating system: Linux-6.7.9-gentoo-x86_64-AMD_Ryzen_Threadripper_3970X_32-Core_Processor-with-glibc2.38 64 Bits, X11 UI
Graphics card: Quadro RTX 8000/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 550.54.14

Blender Version
Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-03-17 18:08, hash: e4e4b51c833f
Worked: Saturday build bot build, hash: 6329ac2f7dde

Short description of error
Blender crashes when opening any of the GOLD production files. I have attached a small one for further examination. The console reads:

Code marked as unreachable has been executed. Please report this as a bug.
Error found at source/blender/nodes/NOD_geometry_exec.hh:339 in get_output_index.

debug backtrace (maybe it helps):

#0  0x0000555555d610b1 in blender::ImplicitSharingPtr<blender::bke::GeometryComponent>::ImplicitSharingPtr (this=0x101, other=...) at /usr/src/debug/media-gfx/blender-9999/blender-9999/source/blender/blenlib/BLI_implicit_sharing_ptr.hh:33
#1  0x0000555555d602c5 in std::array<blender::ImplicitSharingPtr<blender::bke::GeometryComponent>, 7ul>::array (this=0x101) at /usr/lib/gcc/x86_64-pc-linux-gnu/13/include/g++-v13/array:94
#2  0x0000555555d5a1b1 in blender::bke::GeometrySet::GeometrySet (this=0x101, other=...) at /usr/src/debug/media-gfx/blender-9999/blender-9999/source/blender/blenkernel/intern/geometry_set.cc:111
#3  0x0000555557a3efec in blender::fn::lazy_function::Params::set_output<blender::bke::GeometrySet&> (this=0x7fff1d3ff3f0, index=-1, value=...) at /usr/src/debug/media-gfx/blender-9999/blender-9999/source/blender/functions/FN_lazy_function.hh:468
#4  0x0000555557a3d513 in blender::nodes::GeoNodeExecParams::set_output<blender::bke::GeometrySet&> (this=0x7fff1d3ff1a0, identifier=..., value=...) at /usr/src/debug/media-gfx/blender-9999/blender-9999/source/blender/nodes/NOD_geometry_exec.hh:185
#5  0x0000555558c02a11 in blender::nodes::node_geo_separate_components_cc::node_geo_exec (params=...) at /usr/src/debug/media-gfx/blender-9999/blender-9999/source/blender/nodes/geometry/nodes/node_geo_separate_components.cc:57
#6  0x000055555729cdab in blender::nodes::LazyFunctionForGeometryNode::execute_impl (this=0x7ffe2c06a798, params=..., context=...) at /usr/src/debug/media-gfx/blender-9999/blender-9999/source/blender/nodes/intern/geometry_nodes_lazy_function.cc:328
#7  0x00005555572918db in blender::fn::lazy_function::LazyFunction::execute (this=0x7ffe2c06a798, params=..., context=...) at /usr/src/debug/media-gfx/blender-9999/blender-9999/source/blender/functions/FN_lazy_function.hh:369
#8  0x000055555b21db7e in blender::fn::lazy_function::Executor::execute_node (this=0x555565bb0a78, node=..., node_state=..., current_task=..., local_data=...) at /usr/src/debug/media-gfx/blender-9999/blender-9999/source/blender/functions/intern/lazy_function_graph_executor.cc:1455
#9  0x000055555b21be8e in blender::fn::lazy_function::Executor::run_node_task (this=0x555565bb0a78, node=..., current_task=..., local_data=...) at /usr/src/debug/media-gfx/blender-9999/blender-9999/source/blender/functions/intern/lazy_function_graph_executor.cc:925
#10 0x000055555b21b559 in blender::fn::lazy_function::Executor::run_task (this=0x555565bb0a78, current_task=..., local_data=...) at /usr/src/debug/media-gfx/blender-9999/blender-9999/source/blender/functions/intern/lazy_function_graph_executor.cc:815
#11 0x000055555b21d1d7 in blender::fn::lazy_function::Executor::push_to_task_pool(std::unique_ptr<blender::fn::lazy_function::ScheduledNodes, std::default_delete<blender::fn::lazy_function::ScheduledNodes> >)::{lambda(TaskPool*, void*)#1}::operator()(TaskPool*, void*) const (__closure=0x0, pool=0x555565237cd8, data=0x555563ec8150)
    at /usr/src/debug/media-gfx/blender-9999/blender-9999/source/blender/functions/intern/lazy_function_graph_executor.cc:1289
#12 0x000055555b21d259 in blender::fn::lazy_function::Executor::push_to_task_pool(std::unique_ptr<blender::fn::lazy_function::ScheduledNodes, std::default_delete<blender::fn::lazy_function::ScheduledNodes> >)::{lambda(TaskPool*, void*)#1}::_FUN(TaskPool*, void*) ()
    at /usr/src/debug/media-gfx/blender-9999/blender-9999/source/blender/functions/intern/lazy_function_graph_executor.cc:1290
#13 0x0000555556b5c1a3 in Task::operator() (this=0x7fffe01ca840) at /usr/src/debug/media-gfx/blender-9999/blender-9999/source/blender/blenlib/intern/task_pool.cc:166
#14 0x0000555556b5cb1c in tbb::detail::d2::(anonymous namespace)::task_ptr_or_nullptr<Task const&> (f=...) at /usr/include/oneapi/tbb/task_group.h:132
#15 0x0000555556b5d4fe in tbb::detail::d1::function_task<Task>::execute (this=0x7fffe01ca800, ed=...) at /usr/include/oneapi/tbb/task_group.h:452
#16 0x00007ffff7f56073 in ??? () at /usr/lib64/libtbb.so.12
#17 0x00007ffff7f658ab in ??? () at /usr/lib64/libtbb.so.12
#18 0x00007ffff7f69dd4 in ??? () at /usr/lib64/libtbb.so.12
#19 0x00007ffff7f69f59 in ??? () at /usr/lib64/libtbb.so.12
#20 0x00007fffed0c745c in ??? () at /lib64/libc.so.6
#21 0x00007fffed138138 in ??? () at /lib64/libc.so.6

Exact steps for others to reproduce the error
just open the attached file, it should crash right away.

**System Information** Operating system: Linux-6.7.9-gentoo-x86_64-AMD_Ryzen_Threadripper_3970X_32-Core_Processor-with-glibc2.38 64 Bits, X11 UI Graphics card: Quadro RTX 8000/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 550.54.14 **Blender Version** Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-03-17 18:08, hash: `e4e4b51c833f` Worked: Saturday build bot build, hash: `6329ac2f7dde` **Short description of error** Blender crashes when opening any of the GOLD production files. I have attached a small one for further examination. The console reads: ``` Code marked as unreachable has been executed. Please report this as a bug. Error found at source/blender/nodes/NOD_geometry_exec.hh:339 in get_output_index. ``` debug backtrace (maybe it helps): ``` #0 0x0000555555d610b1 in blender::ImplicitSharingPtr<blender::bke::GeometryComponent>::ImplicitSharingPtr (this=0x101, other=...) at /usr/src/debug/media-gfx/blender-9999/blender-9999/source/blender/blenlib/BLI_implicit_sharing_ptr.hh:33 #1 0x0000555555d602c5 in std::array<blender::ImplicitSharingPtr<blender::bke::GeometryComponent>, 7ul>::array (this=0x101) at /usr/lib/gcc/x86_64-pc-linux-gnu/13/include/g++-v13/array:94 #2 0x0000555555d5a1b1 in blender::bke::GeometrySet::GeometrySet (this=0x101, other=...) at /usr/src/debug/media-gfx/blender-9999/blender-9999/source/blender/blenkernel/intern/geometry_set.cc:111 #3 0x0000555557a3efec in blender::fn::lazy_function::Params::set_output<blender::bke::GeometrySet&> (this=0x7fff1d3ff3f0, index=-1, value=...) at /usr/src/debug/media-gfx/blender-9999/blender-9999/source/blender/functions/FN_lazy_function.hh:468 #4 0x0000555557a3d513 in blender::nodes::GeoNodeExecParams::set_output<blender::bke::GeometrySet&> (this=0x7fff1d3ff1a0, identifier=..., value=...) at /usr/src/debug/media-gfx/blender-9999/blender-9999/source/blender/nodes/NOD_geometry_exec.hh:185 #5 0x0000555558c02a11 in blender::nodes::node_geo_separate_components_cc::node_geo_exec (params=...) at /usr/src/debug/media-gfx/blender-9999/blender-9999/source/blender/nodes/geometry/nodes/node_geo_separate_components.cc:57 #6 0x000055555729cdab in blender::nodes::LazyFunctionForGeometryNode::execute_impl (this=0x7ffe2c06a798, params=..., context=...) at /usr/src/debug/media-gfx/blender-9999/blender-9999/source/blender/nodes/intern/geometry_nodes_lazy_function.cc:328 #7 0x00005555572918db in blender::fn::lazy_function::LazyFunction::execute (this=0x7ffe2c06a798, params=..., context=...) at /usr/src/debug/media-gfx/blender-9999/blender-9999/source/blender/functions/FN_lazy_function.hh:369 #8 0x000055555b21db7e in blender::fn::lazy_function::Executor::execute_node (this=0x555565bb0a78, node=..., node_state=..., current_task=..., local_data=...) at /usr/src/debug/media-gfx/blender-9999/blender-9999/source/blender/functions/intern/lazy_function_graph_executor.cc:1455 #9 0x000055555b21be8e in blender::fn::lazy_function::Executor::run_node_task (this=0x555565bb0a78, node=..., current_task=..., local_data=...) at /usr/src/debug/media-gfx/blender-9999/blender-9999/source/blender/functions/intern/lazy_function_graph_executor.cc:925 #10 0x000055555b21b559 in blender::fn::lazy_function::Executor::run_task (this=0x555565bb0a78, current_task=..., local_data=...) at /usr/src/debug/media-gfx/blender-9999/blender-9999/source/blender/functions/intern/lazy_function_graph_executor.cc:815 #11 0x000055555b21d1d7 in blender::fn::lazy_function::Executor::push_to_task_pool(std::unique_ptr<blender::fn::lazy_function::ScheduledNodes, std::default_delete<blender::fn::lazy_function::ScheduledNodes> >)::{lambda(TaskPool*, void*)#1}::operator()(TaskPool*, void*) const (__closure=0x0, pool=0x555565237cd8, data=0x555563ec8150) at /usr/src/debug/media-gfx/blender-9999/blender-9999/source/blender/functions/intern/lazy_function_graph_executor.cc:1289 #12 0x000055555b21d259 in blender::fn::lazy_function::Executor::push_to_task_pool(std::unique_ptr<blender::fn::lazy_function::ScheduledNodes, std::default_delete<blender::fn::lazy_function::ScheduledNodes> >)::{lambda(TaskPool*, void*)#1}::_FUN(TaskPool*, void*) () at /usr/src/debug/media-gfx/blender-9999/blender-9999/source/blender/functions/intern/lazy_function_graph_executor.cc:1290 #13 0x0000555556b5c1a3 in Task::operator() (this=0x7fffe01ca840) at /usr/src/debug/media-gfx/blender-9999/blender-9999/source/blender/blenlib/intern/task_pool.cc:166 #14 0x0000555556b5cb1c in tbb::detail::d2::(anonymous namespace)::task_ptr_or_nullptr<Task const&> (f=...) at /usr/include/oneapi/tbb/task_group.h:132 #15 0x0000555556b5d4fe in tbb::detail::d1::function_task<Task>::execute (this=0x7fffe01ca800, ed=...) at /usr/include/oneapi/tbb/task_group.h:452 #16 0x00007ffff7f56073 in ??? () at /usr/lib64/libtbb.so.12 #17 0x00007ffff7f658ab in ??? () at /usr/lib64/libtbb.so.12 #18 0x00007ffff7f69dd4 in ??? () at /usr/lib64/libtbb.so.12 #19 0x00007ffff7f69f59 in ??? () at /usr/lib64/libtbb.so.12 #20 0x00007fffed0c745c in ??? () at /lib64/libc.so.6 #21 0x00007fffed138138 in ??? () at /lib64/libc.so.6 ``` **Exact steps for others to reproduce the error** just open the attached file, it should crash right away.
Andy Goralczyk added the
Type
Report
Priority
Normal
Status
Needs Triage
labels 2024-03-18 10:51:05 +01:00
Member

Talked to @JacquesLucke about it, he said he would look into it in a bit

Talked to @JacquesLucke about it, he said he would look into it in a bit
Member

Caused by 62bd0ea5fd. The issue is that the flag can change but the declaration is not rebuild. Will fix.

Caused by 62bd0ea5fde55a696e0a8353249ed4964d62984d. The issue is that the flag can change but the declaration is not rebuild. Will fix.
Jacques Lucke added
Priority
High
Status
Confirmed
and removed
Priority
Normal
Status
Needs Triage
labels 2024-03-18 11:37:36 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-03-18 13:58:43 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#119617
No description provided.