Fix #119617: crash because node sockets depend on experimental feature flag

This was caused by 62bd0ea5fde55a696e0a8353249ed4964d62984d. Now the socket is
always created but made unavailable if the feature is disabled.

Pull Request: https://projects.blender.org/blender/blender/pulls/119620